[MVT] Compilation fails with "unexpected projection from allocation node"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • repo-valhalla
    • Affects Version/s: repo-valhalla
    • Component/s: hotspot

      # Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/450fa0f5-8733-43f8-b866-79fe3e86d200-S751/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/3be7b1ef-b353-4653-baef-7939e5e30fe7/runs/b961c600-7ef9-4b89-80f4-fe560328d4e2/workspace/open/src/hotspot/share/opto/callnode.cpp:943), pid=5378, tid=5410
      # assert(false) failed: unexpected projection from allocation node.

      Current CompileTask:
      C2: 1032 96 !b compiler.valhalla.valuetypes.TestCallingConvention::test21 (11 bytes)

      Stack: [0x00007f7d38e8d000,0x00007f7d38f8e000], sp=0x00007f7d38f86db0, free space=999k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1770faf] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x15f
      V [libjvm.so+0x1771d6f] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
      V [libjvm.so+0xb3ab5d] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
      V [libjvm.so+0x8b1ae6] CallNode::extract_projections(CallProjections*, bool, bool)+0x266
      V [libjvm.so+0x8a0eaf] LateInlineCallGenerator::do_late_inline()+0x51f
      V [libjvm.so+0xa97d22] Compile::inline_incrementally_one(PhaseIterGVN&)+0x402
      V [libjvm.so+0xa97eff] Compile::inline_incrementally(PhaseIterGVN&)+0x12f
      V [libjvm.so+0xa9e719] Compile::Optimize()+0x479
      V [libjvm.so+0xaa076c] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x125c
      V [libjvm.so+0x89ddd2] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x2e2
      V [libjvm.so+0xaabf1c] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3ac
      V [libjvm.so+0xaacff0] CompileBroker::compiler_thread_loop()+0x340
      V [libjvm.so+0x16a6502] JavaThread::thread_main_inner()+0x242
      V [libjvm.so+0x13dda1a] thread_native_entry(Thread*)+0xfa
      C [libpthread.so.0+0x7dc5] start_thread+0xc5

            Assignee:
            Roland Westrelin
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: