8193501: [MVT] Compilation fails with "unexpected projection from allocation node"

Reviewed-by: dsimms