src/hotspot/share/opto/callGenerator.cpp
@@ -397,18 +397,22 @@ void LateInlineCallGenerator::do_late_inline() {
   }
 
   // check for unreachable loop
-  CallProjections callprojs;
-  call->extract_projections(&callprojs, true);
-  if (callprojs.fallthrough_catchproj == call->in(0) ||
-      callprojs.catchall_catchproj == call->in(0) ||
-      callprojs.fallthrough_memproj == call->in(TypeFunc::Memory) ||
-      callprojs.catchall_memproj == call->in(TypeFunc::Memory) ||
-      callprojs.fallthrough_ioproj == call->in(TypeFunc::I_O) ||
-      callprojs.catchall_ioproj == call->in(TypeFunc::I_O) ||
-      (callprojs.resproj != NULL && call->find_edge(callprojs.resproj) != -1) ||
-      (callprojs.exobj != NULL && call->find_edge(callprojs.exobj) != -1)) {
+  CallProjections* callprojs = call->extract_projections(true);
+  if (callprojs->fallthrough_catchproj == call->in(0) ||
+      callprojs->catchall_catchproj == call->in(0) ||
+      callprojs->fallthrough_memproj == call->in(TypeFunc::Memory) ||
+      callprojs->catchall_memproj == call->in(TypeFunc::Memory) ||
+      callprojs->fallthrough_ioproj == call->in(TypeFunc::I_O) ||
+      callprojs->catchall_ioproj == call->in(TypeFunc::I_O) ||
+      (callprojs->exobj != NULL && call->find_edge(callprojs->exobj) != -1)) {
     return;
   }
+  for (uint i = 0; i < callprojs->nb_resproj; i++) {
+    if (callprojs->resproj[i] != NULL && call->find_edge(callprojs->resproj[i]) != -1) {
+      return;
+    }
+  }
+
 
   Compile* C = Compile::current();
   // Remove inlined methods from Compiler's lists.
